<resources>
    <string name="app_name">AgSimplified</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->
    <!--<string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>-->
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="forgot_your_password">Forgot your password? Click here</string>
    <string name="sign_in">Sign In</string>

    <string name="acres_applied">Acres Applied</string>
    <string name="acres_planned">Acres Planned</string>
    <string name="add">Add</string>
    <string name="add_load">Add Load</string>
    <string name="amount">Amount</string>
    <string name="amount_ton">Amount (ton)</string>
    <string name="application_setup">Application Setup</string>
    <string name="cancel">Cancel</string>
    <string name="client">Client</string>
    <string name="client_job_code">Client Job Code</string>
    <string name="close">Close</string>
    <string name="crop_year">Crop Year</string>
    <string name="directions">Directions</string>
    <string name="farm">Farm</string>
    <string name="fertilizer_name">Fertilizer Name</string>
    <string name="fertilizer_storage">Fertilizer Storage</string>
    <string name="field_activity">Field Activity</string>
    <string name="field_activity_sheet">Field Activity Sheet</string>
    <string name="field_activity_sheets">Field Activity Sheets</string>
    <string name="field">Field</string>
    <string name="from">From</string>
    <string name="from_operation">From Operation</string>
    <string name="from_storage_inventory">From Storage Inventory</string>
    <string name="gross_weight">Gross Weight</string>
    <string name="gross_weight_lbs">Gross Weight (lbs)</string>
    <string name="hauled_amount">Hauled Amount</string>
    <string name="job_code">Job Code</string>
    <string name="job_details">Job Details</string>
    <string name="job_setup">Job Setup</string>
    <string name="job_type">Job Type</string>
    <string name="lbs">Lbs</string>
    <string name="loader_operator">Loader Operator</string>
    <string name="loading_company">Loading Company</string>
    <string name="load_sheet">Load Sheet</string>
    <string name="load_sheets">Load Sheets</string>
    <string name="loads">Loads</string>
    <string name="location">Location</string>
    <string name="main_activity">Main Activity</string>
    <string name="map">Map</string>
    <string name="miles">Miles</string>
    <string name="none">none</string>
    <string name="notes">Notes</string>
    <string name="ok">OK</string>
    <string name="operation">Operation</string>
    <string name="planned_amount">Planned Amount</string>
    <string name="planned_method_of_application">Planned Method of Application</string>
    <string name="product">Product</string>
    <string name="product_type">Product Type</string>
    <string name="scale_ticket">Scale Ticket</string>
    <string name="search_for_activities">Search for Activities</string>
    <string name="search_for_load_sheets">Search for Load Sheets</string>
    <string name="search">Search</string>
    <string name="tare_weight_lbs">Tare Weight (lbs)</string>
    <string name="tare_weight">Tare Weight</string>
    <string name="text_location_permission">Location access is required.</string>
    <string name="time">Time</string>
    <string name="title_activity_distribution_sale">Distribution Sale</string>
    <string name="title_activity_field_activity">Field Activity</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="ton">Ton</string>
    <string name="to_operation">To Operation</string>
    <string name="total_amount_hauled">Total Amount Hauled</string>
    <string name="total_loads_recorded">Total Loads Recorded</string>
    <string name="to">To</string>
    <string name="trucking_company">Trucking Company</string>
    <string name="type">Type</string>
    <string name="year">Year</string>
    <string name="your_amount_hauled">Your Amount Hauled</string>
    <string name="your_loads_recorded">Your Loads Recorded</string>
    <string name="zero">0</string>
    <string name="zero_point_zero_zero">0.00</string>
    <string name="vehicle_owner">Vehicle Owner</string>
    <string name="vehicle">Vehicle</string>
    <string name="implement_owner">Implement Owner</string>
    <string name="implement">Implement</string>
    <string name="tons_per_acre">Tons per Acre</string>
    <string name="planned_application_rate">Planned Application Rate</string>
    <string name="average_tons_per_acre">Average Tons Per Acre</string>
    <string name="tons_per_hour">Tons Per Hour</string>
    <string name="add_application">Add Application</string>
    <string name="depth">Depth</string>
    <string name="logout">Logout</string>
    <string name="Database_problem">Database problem</string>
    <string name="refresh_directions">Refresh directions</string>
    <string name="start_navigator">Start navigator</string>
    <string name="loading_the_database">Loading the Database</string>
    <string name="clients">Clients</string>
    <string name="distribution_sales">Distribution Sales</string>
    <string name="farms">Farms</string>
    <string name="fields">Fields</string>
    <string name="job_plans">Job Plans</string>
    <string name="products">Products</string>
    <string name="sites">Sites</string>
    <string name="storages">Storages</string>
    <string name="storage_inventories">Storage Inventories</string>
</resources>
