<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agsimplified.android.view.fieldactivity.FAFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fieldActivityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/field_activity"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jobCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/job_code"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/fieldActivityLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jobCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/jobCodeLabel"
            app:layout_constraintStart_toEndOf="@+id/jobCodeLabel" />

        <TextView
            android:id="@+id/clientJobCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/client_job_code"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/jobCodeLabel"
            app:layout_constraintStart_toEndOf="@+id/jobCode" />

        <TextView
            android:id="@+id/clientJobCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/clientJobCodeLabel"
            app:layout_constraintStart_toEndOf="@+id/clientJobCodeLabel" />

        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/crop_year"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/clientJobCodeLabel"
            app:layout_constraintStart_toEndOf="@+id/clientJobCode" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/yearLabel"
            app:layout_constraintStart_toEndOf="@+id/yearLabel" />

        <TextView
            android:id="@+id/activityTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/main_activity"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/yearLabel"
            app:layout_constraintStart_toEndOf="@+id/year" />

        <TextView
            android:id="@+id/activityType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/activityTypeLabel"
            app:layout_constraintStart_toEndOf="@+id/activityTypeLabel" />

        <TextView
            android:id="@+id/clientLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/client"
            app:layout_constraintStart_toStartOf="@+id/jobCodeLabel"
            app:layout_constraintTop_toBottomOf="@+id/jobCodeLabel" />

        <TextView
            android:id="@+id/client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/clientLabel"
            app:layout_constraintStart_toEndOf="@+id/clientLabel" />

        <TextView
            android:id="@+id/farmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/farm"
            app:layout_constraintBaseline_toBaselineOf="@+id/client"
            app:layout_constraintStart_toEndOf="@+id/client" />

        <TextView
            android:id="@+id/farm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/farmLabel"
            app:layout_constraintStart_toEndOf="@+id/farmLabel" />

        <TextView
            android:id="@+id/fieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/field"
            app:layout_constraintBaseline_toBaselineOf="@+id/farm"
            app:layout_constraintStart_toEndOf="@+id/farm" />

        <TextView
            android:id="@+id/field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fieldLabel"
            app:layout_constraintStart_toEndOf="@+id/fieldLabel" />

        <TextView
            android:id="@+id/plannedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/acres_planned"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/field"
            app:layout_constraintStart_toEndOf="@+id/field" />

        <TextView
            android:id="@+id/acresPlanned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/zero_point_zero_zero"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/plannedLabel"
            app:layout_constraintStart_toEndOf="@+id/plannedLabel" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>