<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agsimplified.android.views.MainActivity">

    <ImageView
        android:id="@+id/agSimplifiedLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/agsimplified_logo_lg" />

    <Button
        android:id="@+id/loadSheetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:width="384dp"
        android:height="96dp"
        android:background="@color/colorPrimary"
        android:onClick="showDistributionSaleSearch"
        android:text="@string/load_sheets"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/agSimplifiedLogo"
        app:layout_constraintStart_toStartOf="@+id/agSimplifiedLogo"
        app:layout_constraintTop_toBottomOf="@+id/agSimplifiedLogo" />

    <Button
        android:id="@+id/activityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:width="384dp"
        android:height="96dp"
        android:background="@color/colorPrimary"
        android:onClick="showFieldActivitySearch"
        android:text="@string/field_activity_sheets"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/agSimplifiedLogo"
        app:layout_constraintStart_toStartOf="@+id/agSimplifiedLogo"
        app:layout_constraintTop_toBottomOf="@+id/loadSheetButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:width="384dp"
        android:height="96dp"
        android:background="@color/colorPrimary"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/agSimplifiedLogo"
        app:layout_constraintStart_toStartOf="@+id/agSimplifiedLogo"
        app:layout_constraintTop_toBottomOf="@+id/activityButton" />

    <!--<TextView-->
        <!--android:id="@+id/searchLabel"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="32dp"-->
        <!--android:text="@string/search"-->
        <!--android:textAllCaps="true"-->
        <!--android:textSize="30sp"-->
        <!--android:textStyle="bold"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/agSimplifiedLogo"-->
        <!--app:layout_constraintStart_toStartOf="@+id/agSimplifiedLogo"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/agSimplifiedLogo" />-->

    <ListView
        android:id="@+id/searchResultsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/agSimplifiedLogo"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
